--- a/leads_app/templates/registration/signup.html
+++ b/leads_app/templates/registration/signup.html
@@ -265,7 +265,7 @@
                     </a> -->
                     
                     <div class="text-center mt-4">
-                        <p class="mb-0">Already have an account? <a href="{% url 'login' %}" class="login-link">Log in</a></p>
+                        <p class="mb-0">Already have an account? <a href="{% url 'home_selection_view' %}" class="login-link">Log in</a></p>
                     </div>
                 </form>
             </div>
