--- a/leads_app/templates/add_product.html
+++ b/leads_app/templates/add_product.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container mt-5">
     
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-success">Save</button>
