--- a/leads_app/templates/service_product_list.html
+++ b/leads_app/templates/service_product_list.html
@@ -170,7 +170,7 @@
                         <label class="form-label">Price</label>
                         <div class="input-group">
                             <span class="input-group-text">₹</span>
-                            <input type="number" class="form-control" name="price" step="0.01" required>
+                            <input type="number" class="form-control" name="price" step="0.01" >
                         </div>
                     </div>
                     <div class="mb-3">
@@ -251,7 +251,7 @@
                             <label class="form-label">Price</label>
                             <div class="input-group">
                                 <span class="input-group-text">₹</span>
-                                <input type="number" class="form-control" name="price" value="{{ product.price }}" step="0.01" required>
+                                <input type="number" class="form-control" name="price" value="{{ product.price }}" step="0.01" >
                             </div>
                         </div>
                         <div class="mb-3">
