--- a/leads_app/templates/preview_quotation.html
+++ b/leads_app/templates/preview_quotation.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +21,7 @@
             color: #000;
         }
 
-        .cover-page {
+        /* .cover-page {
             width: 100vw;
             height: 100vh;
             margin: 0;
@@ -35,7 +36,25 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        } */
+
+        .cover-page {
+            width: 100%;
+            height: 1000px; /* Approx. A4 height at 96dpi (~11in) */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            page-break-after: always;
+            /* position: relative; */
         }
+
+        .cover-page img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
 
         .content {
             padding: 40px;
@@ -112,13 +131,17 @@
 
     
 
-    <!-- Cover Page -->
-    <div class="cover-page">
-        <img src="" alt="Cover Page">
-    </div>
+    
 
     <!-- Quotation Content -->
     <div class="content">
+
+        <!-- Cover Page -->
+        <div class="cover-page">
+            {% if company.q_coverpage %}
+                    <img src="{{ company.q_coverpage.url }}" alt="Cover page"><br>
+                {% endif %}
+        </div>
 
         <!-- Header -->
         <div class="header">
@@ -300,11 +323,12 @@
         function downloadPDF() {
             const element = document.querySelector('.content');  // This is the part you want to export
             const opt = {
-                margin:       0.5,
+                margin:       0.2,
                 filename:     'quotation_{{ quotation_number|default:"0000" }}.pdf',
                 image:        { type: 'jpeg', quality: 0.98 },
-                html2canvas:  { scale: 2 },
+                html2canvas:  { scale: 2,useCORS: true },
                 jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
+                // jsPDF:        { unit: 'px', format: 'a4', orientation: 'portrait' }
             };
 
             html2pdf().set(opt).from(element).save();
